--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		text-decoration: none;
 		cursor: default;"
 	>
-		<span style="cursor: pointer;">Jason Klym</span>
+		<span style="cursor: pointer; text-align: center;">Jason Klym</span>
 	</a>
 </body>
 </html>
