--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body style="height: 100%; margin: 0; padding: 0;">
+<body style="height: 100%; margin: 0; padding: 0 1rem;">
 	<a href="https://slack.com/"
 		target="_blank"
 		rel="noopener noreferrer"
