--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body style="height: 100%; margin: 0; padding: 0 1rem;">
-	<a href="https://slack.com/"
+	<a href="https://www.linkedin.com/in/jasonklym/"
 		target="_blank"
 		rel="noopener noreferrer"
 		style="display: -webkit-box;
