--- a/index.html
+++ b/index.html
@@ -5,29 +5,30 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<style>
+		body {
+			height: 100vh;
+			width: 100vw;
+			margin: 0;
+			padding: 48px;
+		}
+
+		.heading {
+			font-size: 1.25rem;
+			line-height: 1.5;
+			margin-bottom: 16px;
+		}
+
+		.copy {
+			font-size: 1rem;
+			line-height: 1.25;
+			margin-bottom: 16px;
+		}
+	</style>
 </head>
-<body style="height: 100%; margin: 0; padding: 0 1rem;">
-	<a href="https://www.linkedin.com/in/jasonklym/"
-		target="_blank"
-		rel="noopener noreferrer"
-		style="display: -webkit-box;
-		display: -ms-flexbox;
-		display: flex;
-		-webkit-box-align: center;
-		-ms-flex-align: center;
-		align-items: center;
-		-webkit-box-pack: center;
-		-ms-flex-pack: center;
-		justify-content: center;
-		cursor: pointer;
-		height: 100%;
-		font-family: monospace;
-		font-size: 4rem;
-		color: black;
-		text-decoration: none;
-		cursor: default;"
-	>
-		<span style="cursor: pointer; text-align: center;">Jason Klym</span>
-	</a>
+<body class="body">
+	<h1 class="heading">Jason Klym</h1>
+	<h2 class="copy">Software engineer in New York, on Pacific Time, and committed to <a href="https://panobi.com" target="_blank" rel="noopener noreferrer">Panobi</a>.</h2>
+	<a class="copy" href="https://www.linkedin.com/in/jasonklym/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
 </body>
 </html>
