--- a/index.html
+++ b/index.html
@@ -11,22 +11,24 @@
 			width: 100vw;
 			margin: 0;
 			padding: 48px;
+			font-family: Arial, Helvetica, sans-serif;
+			color: #121212;
 		}
 
 		.heading {
 			font-size: 1.25rem;
 			line-height: 1.5;
-			margin-bottom: 16px;
+			margin: 0 0 16px;
 		}
 
 		.copy {
 			font-size: 1rem;
 			line-height: 1.25;
-			margin-bottom: 16px;
+			bottom: 0 0 16px;
 		}
 	</style>
 </head>
-<body class="body">
+<body>
 	<h1 class="heading">Jason Klym</h1>
 	<h2 class="copy">Software engineer in New York, on Pacific Time, and committed to <a href="https://panobi.com" target="_blank" rel="noopener noreferrer">Panobi</a>.</h2>
 	<a class="copy" href="https://www.linkedin.com/in/jasonklym/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
