--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 		.copy {
 			font-size: 1rem;
 			line-height: 1.25;
-			bottom: 0 0 16px;
+			margin: 0 0 16px;
 		}
 	</style>
 </head>
 <body>
 	<h1 class="heading">Jason Klym</h1>
-	<h2 class="copy">Software engineer in New York, on Pacific Time, and committed to <a href="https://panobi.com" target="_blank" rel="noopener noreferrer">Panobi</a>.</h2>
+	<p class="copy">Software engineer in New York, on Pacific Time, and committed to <a href="https://panobi.com" target="_blank" rel="noopener noreferrer">Panobi</a>.</p>
 	<a class="copy" href="https://www.linkedin.com/in/jasonklym/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
 </body>
 </html>
