--- a/index.html
+++ b/index.html
@@ -7,30 +7,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style>
 		body {
-			height: 100vh;
-			width: 100vw;
 			margin: 0;
-			padding: 48px;
-			font-family: Arial, Helvetica, sans-serif;
+			padding: 32px;
+			font-family: sans-serif;
 			color: #121212;
 		}
 
-		.heading {
-			font-size: 1.25rem;
-			line-height: 1.5;
-			margin: 0 0 16px;
-		}
-
-		.copy {
-			font-size: 1rem;
-			line-height: 1.25;
+		.text {
+			font-weight: 100;
 			margin: 0 0 16px;
 		}
 	</style>
 </head>
 <body>
-	<h1 class="heading">Jason Klym</h1>
-	<p class="copy">Software engineer in New York, on Pacific Time, and committed to <a href="https://panobi.com" target="_blank" rel="noopener noreferrer">Panobi</a>.</p>
-	<a class="copy" href="https://www.linkedin.com/in/jasonklym/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+	<h1 class="text">Jason Klym</h1>
+	<p class="text">Software engineer in New York, on Pacific Time, and committed to <a href="https://panobi.com" target="_blank" rel="noopener noreferrer">Panobi</a>.</p>
+	<a class="text" href="https://www.linkedin.com/in/jasonklym/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
 </body>
 </html>
