--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 		}
 
 		.text {
-			font-weight: 100;
-			margin: 0 0 16px;
+			font-weight: lighter;
+			margin: 0 0 20px;
 		}
 	</style>
 </head>
 <body>
 	<h1 class="text">Jason Klym</h1>
-	<h2 class="text">Software engineer in New York, on Pacific Time, and committed to <a href="https://panobi.com" target="_blank" rel="noopener noreferrer">Panobi</a>.</h2>
-	<a class="text" href="https://www.linkedin.com/in/jasonklym/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+	<h3 class="text">Software engineer in New York, on Pacific Time, and committed to <a href="https://panobi.com" target="_blank" rel="noopener noreferrer">Panobi</a>.</h3>
+	<h3 class="text"><a href="https://www.linkedin.com/in/jasonklym/" target="_blank" rel="noopener noreferrer">LinkedIn</a></h3>
 </body>
 </html>
