--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 	<h1 class="text">Jason Klym</h1>
-	<h3 class="text">Software engineer in New York, on Pacific Time, and committed to <a href="https://panobi.com" target="_blank" rel="noopener noreferrer">Panobi</a>.</h3>
+	<h3 class="text">Software engineer in New York, on Pacific Time, and committed indefinitely to <a href="https://panobi.com" target="_blank" rel="noopener noreferrer">Panobi</a>.</h3>
 	<h3 class="text"><a href="https://www.linkedin.com/in/jasonklym/" target="_blank" rel="noopener noreferrer">LinkedIn</a></h3>
 </body>
 </html>
