--- a/index.html
+++ b/index.html
@@ -6,16 +6,27 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style>
+		html {
+			height: 100vh;
+			width: 100vw;
+		}
 		body {
 			margin: 0;
 			padding: 40px;
 			font-family: monospace;
 			color: #121212;
 		}
-
 		.text {
 			font-weight: lighter;
 			margin: 0 0 20px;
+		}
+		@media (prefers-color-scheme: dark) {
+			html {
+				background-color: #121212;
+			}
+			body {
+				color: #fff;
+			}
 		}
 	</style>
 </head>
