--- a/index.html
+++ b/index.html
@@ -6,18 +6,27 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style>
-		html {
+		html, body {
 			height: 100vh;
 			width: 100vw;
+			margin: 0;
+			padding: 0;
 		}
 		body {
-			margin: 0;
-			padding: 40px;
-			font-family: monospace;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			font-family: sans-serif;
 			color: #121212;
 		}
+		.box {
+			display: flex;
+			flex-direction: column;
+			padding: 20px 20px 0;
+			max-width: 480px;
+		}
 		.text {
-			font-weight: lighter;
+			font-weight: 100;
 			margin: 0 0 20px;
 		}
 		@media (prefers-color-scheme: dark) {
@@ -31,8 +40,10 @@
 	</style>
 </head>
 <body>
-	<h1 class="text">Jason Klym</h1>
-	<h3 class="text">Software engineer in New York, on Pacific Time, and committed indefinitely to <a href="https://panobi.com" target="_blank" rel="noopener noreferrer">Panobi</a>.</h3>
-	<h3 class="text"><a href="https://www.linkedin.com/in/jasonklym/" target="_blank" rel="noopener noreferrer">LinkedIn</a></h3>
+	<div class="box">
+		<h1 class="text">Jason Klym</h1>
+		<h3 class="text">Software engineer in New York, on Pacific Time, and committed indefinitely to <a href="https://panobi.com" target="_blank" rel="noopener noreferrer">Panobi</a>.</h3>
+		<h3 class="text"><a href="https://www.linkedin.com/in/jasonklym/" target="_blank" rel="noopener noreferrer">LinkedIn</a></h3>
+	</div>
 </body>
 </html>
