--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			justify-content: center;
 			align-items: center;
 			font-family: sans-serif;
-			color: white;
+			color: black;
 		}
 		.card {
 			display: flex;
