--- a/index.html
+++ b/index.html
@@ -56,5 +56,14 @@
 		<h3 class="text">Software engineer in New York, on Pacific Time, and committed indefinitely to <a href="https://panobi.com" target="_blank" rel="noopener noreferrer">Panobi</a>.</h3>
 		<h3 class="text"><a href="https://www.linkedin.com/in/jasonklym/" target="_blank" rel="noopener noreferrer">LinkedIn</a></h3>
 	</div>
+	<script>
+		const degrees = 360;
+		let angle = 0;
+		setInterval(() => {
+		    angle++;
+		    angle %= degrees;
+		    document.documentElement.style.background = `linear-gradient(${(180 + angle) % degrees}deg, red, transparent), linear-gradient(${(315 + angle) % degrees}deg, lime, transparent), linear-gradient(${(45 + angle) % degrees}deg, blue, transparent)`;
+		}, 100)
+	</script>
 </body>
 </html>
