--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style>
 		html, body {
-			height: 100%;
-			width: 100%;
+			min-height: 100%;
+			min-width: 100%;
 			margin: 0;
 			padding: 0;
 		}
