--- a/index.html
+++ b/index.html
@@ -9,19 +9,17 @@
 		html, body {
 			margin: 0;
 			padding: 0;
-		}
-		html {
 			height: 100%;
 			width: 100%;
+		}
+		html {
 			overflow: hidden;
 			background: linear-gradient(red, transparent), linear-gradient(to top left, lime, transparent), linear-gradient(to top right, blue, transparent);
 			background-blend-mode: screen;
 		}
 		body {
-			min-height: 100%;
-			min-width: 100%;
 			overflow: scroll;
-			display: flex;
+			display: grid;
 			justify-content: center;
 			align-items: center;
 			font-family: sans-serif;
