--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		}
 		html {
 			overflow: hidden;
-			background: linear-gradient(red, transparent), linear-gradient(to top left, lime, transparent), linear-gradient(to top right, blue, transparent);
+			background: linear-gradient(180deg, red, transparent), linear-gradient(315deg, lime, transparent), linear-gradient(45deg, blue, transparent);
 			background-blend-mode: screen;
 		}
 		body {
