--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<style>
 		html, body {
 			margin: 0;
 			padding: 0;
 			height: 100%;
 			width: 100%;
+			background-color: black;
 		}
 		html {
 			overflow: hidden;
@@ -58,7 +61,7 @@
 		<h3 class="text">Software engineer in New York, on Pacific Time, and committed indefinitely to <a href="https://panobi.com" target="_blank" rel="noopener noreferrer">Panobi</a>.</h3>
 		<h3 class="text"><a href="https://www.linkedin.com/in/jasonklym/" target="_blank" rel="noopener noreferrer">LinkedIn</a></h3>
 	</div>
-<!-- 	<script>
+	<script>
 		const degrees = 360;
 		let angle = 0;
 		setInterval(() => {
@@ -66,6 +69,6 @@
 		    angle %= degrees;
 		    document.documentElement.style.background = `linear-gradient(${(180 + angle) % degrees}deg, red, transparent), linear-gradient(${(315 + angle) % degrees}deg, lime, transparent), linear-gradient(${(45 + angle) % degrees}deg, blue, transparent)`;
 		}, 100)
-	</script> -->
+	</script>
 </body>
 </html>
