--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Jason Klym</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 	<meta name="theme-color" content="#000000">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="mobile-web-app-capable" content="yes" />
@@ -20,6 +20,7 @@
 			overflow: hidden;
 			background: linear-gradient(180deg, red, transparent), linear-gradient(315deg, lime, transparent), linear-gradient(45deg, blue, transparent);
 			background-blend-mode: screen;
+			padding: env(safe-area-inset);
 		}
 		body {
 			overflow: scroll;
