--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
 	<title>Jason Klym</title>
+	<link rel="icon" href="/favicon.ico" sizes="any" />
 
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 	<meta name="theme-color" content="#000000">
+	<meta name="apple-mobile-web-app-title" content="Jason Klym" />
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
@@ -75,7 +77,7 @@
 </head>
 <body>
 	<div class="card">
-		<img src="/image.svg" alt="Jason Klym" draggable="false" />
+		<img src="/image.svg" alt="Jason Klym SVG image" draggable="false" />
 		<h2 class="text">Jason Klym</h2>
 		<p class="text">Software engineer in New York, on Pacific Time, and committed indefinitely to <a href="https://panobi.com" target="_blank" rel="noopener noreferrer">Panobi</a>.</p>
 		<p class="text"><a href="https://www.linkedin.com/in/jasonklym/" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
