--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 	<meta property="og:title" content="Jason Klym" />
 	<meta property="og:url" content="https://jasonklym.com" />
 	<meta property="og:description" content="Software engineer in New York, on Pacific Time, and committed indefinitely to Panobi." />
-<!-- 	<meta property="og:image" content="src" /> -->
-<!-- 	<meta property="og:image:alt" content="alt" /> -->
+	<meta property="og:image" content="https://jasonklym.com/image.png" />
+	<meta property="og:image:alt" content="Jason Klym SVG sketch" />
 
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:title" content="Jason Klym" />
 	<meta name="twitter:description" content="Software engineer in New York, on Pacific Time, and committed indefinitely to Panobi." />
-<!-- 	<meta name="twitter:image" content="src" /> -->
-<!-- 	<meta name="twitter:image:alt" content="alt" /> -->
+	<meta name="twitter:image" content="https://jasonklym.com/image.png" />
+	<meta name="twitter:image:alt" content="Jason Klym SVG sketch" />
 
 	<style>
 		html, body {
@@ -77,7 +77,7 @@
 </head>
 <body>
 	<div class="card">
-		<img src="/image.svg" alt="Jason Klym SVG image" draggable="false" />
+		<img src="/image.svg" alt="Jason Klym SVG sketch" draggable="false" />
 		<h2 class="text">Jason Klym</h2>
 		<p class="text">Software engineer in New York, on Pacific Time, and committed indefinitely to <a href="https://panobi.com" target="_blank" rel="noopener noreferrer">Panobi</a>.</p>
 		<p class="text"><a href="https://www.linkedin.com/in/jasonklym/" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
