--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			gap: 20px;
 			padding: 20px;
 			margin: 20px;
-			background: white;
+			background: rgba(255,255,255,0.5);
 			border: 3px solid black;
 			border-radius: 20px;
 			width: 240px;
