--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			display: grid;
 			justify-content: center;
 			align-items: center;
-			font-family: sans-serif;
+			font-family: monospace;
 			color: black;
 		}
 		.card {
