--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			padding: 20px;
 			margin: 20px;
 			background: rgba(255,255,255,0.5);
-			border: 3px solid black;
+			border: 3px dashed black;
 			border-radius: 20px;
 			width: 240px;
 		}
