--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 			justify-content: center;
 			align-items: center;
 			font-family: monospace;
+			font-size: 1rem;
 			color: black;
 		}
 		.card {
