--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	<div class="card">
 		<img src="/image.svg" alt="Jason Klym SVG sketch" draggable="false" />
 		<h2 class="text">Jason Klym</h2>
-		<p class="text">Software engineer in New York, on Pacific Time, and committed indefinitely to <a href="https://panobi.com" target="_blank" rel="noopener noreferrer">Panobi</a>.</p>
+		<p class="text">Software engineer in New York, on Pacific Time, and considering opportunities.</p>
 		<p class="text"><a href="https://www.linkedin.com/in/jasonklym/" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
 	</div>
 	<script>
