--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
 	<meta name="author" content="Jason Klym" />
-	<meta name="description" content="Software engineer in New York, on Pacific Time, and committed indefinitely to Panobi." />
+	<meta name="description" content="Software engineer in New York, and considering opportunities." />
 
 	<meta property="og:locale" content="en_US" />
 	<meta property="og:site_name" content="Jason Klym" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Jason Klym" />
 	<meta property="og:url" content="https://jasonklym.com" />
-	<meta property="og:description" content="Software engineer in New York, on Pacific Time, and committed indefinitely to Panobi." />
+	<meta property="og:description" content="Software engineer in New York, and considering opportunities." />
 	<meta property="og:image" content="https://jasonklym.com/image.png" />
 	<meta property="og:image:alt" content="Jason Klym SVG sketch" />
 
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:title" content="Jason Klym" />
-	<meta name="twitter:description" content="Software engineer in New York, on Pacific Time, and committed indefinitely to Panobi." />
+	<meta name="twitter:description" content="Software engineer in New York, and considering opportunities." />
 	<meta name="twitter:image" content="https://jasonklym.com/image.png" />
 	<meta name="twitter:image:alt" content="Jason Klym SVG sketch" />
 
@@ -79,7 +79,7 @@
 	<div class="card">
 		<img src="/image.svg" alt="Jason Klym SVG sketch" draggable="false" />
 		<h2 class="text">Jason Klym</h2>
-		<p class="text">Software engineer in New York, on Pacific Time, and considering opportunities.</p>
+		<p class="text">Software engineer in New York, and considering opportunities.</p>
 		<p class="text"><a href="https://www.linkedin.com/in/jasonklym/" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
 	</div>
 	<script>
