--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
 	<div class="card">
 		<img src="/image.svg" alt="Jason Klym SVG sketch" draggable="false" />
 		<h2 class="text">Jason Klym</h2>
-		<p class="text">Software engineer in New York, and considering opportunities.</p>
+		<p class="text">
+			• Software engineer in NYC
+			</br>
+			• Considering opportunities
+		</p>
 		<p class="text"><a href="https://www.linkedin.com/in/jasonklym/" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
 	</div>
 	<script>
