--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<p class="text">
 			• Software engineer in NYC
 			</br>
-			<s>• Considering opportunities</s>
+			• <s>Considering opportunities</s>
 		</p>
 		<p class="text"><a href="https://www.linkedin.com/in/jasonklym/" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
 	</div>
